<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CS" />

                <Button
                    android:id="@+id/bt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickButtonTv1"
                    android:text="@string/bt1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgName"
                            android:layout_width="89dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/input_name"
                            app:srcCompat="@drawable/person1" />

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/input_name"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgHeight"
                            android:layout_width="89dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/input_height"
                            app:srcCompat="@drawable/height" />

                        <EditText
                            android:id="@+id/etHeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/input_height"
                            android:inputType="number" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgWeight"
                            android:layout_width="89dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/input_weight"
                            app:srcCompat="@drawable/weight" />

                        <EditText
                            android:id="@+id/etWeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/input_weight"
                            android:inputType="number" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgPhone"
                            android:layout_width="89dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/input_phone"
                            app:srcCompat="@drawable/phone" />

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/input_phone"
                            android:inputType="phone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/male" />

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Male" />

                            <ImageView
                                android:id="@+id/imgFemale"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/female" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Female" />
                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/bt2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile" />

                            <ImageButton
                                android:id="@+id/imageButton"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/person1" />

                            <Button
                                android:id="@+id/button3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableLeft="@android:drawable/btn_star_big_on"
                                android:text="@string/profile" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@android:drawable/ic_menu_help" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTeamFootball"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/footballteam" />

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@android:drawable/ic_lock_lock"
                                android:text="@string/footballteam" />

                            <Button
                                android:id="@+id/button5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@android:drawable/ic_notification_overlay"
                                android:text="@string/footballteam" />

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableTop="@android:drawable/presence_audio_online"
                                android:text="@string/footballteam" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>